proposed changes to fix ie alignment for age

--- a/packages/terra-clinical-onset-picker/src/OnsetPicker.module.scss
+++ b/packages/terra-clinical-onset-picker/src/OnsetPicker.module.scss
@@ -7,7 +7,7 @@
     }
 
     .field-inline {
-      display: inline-block;
+      display: inline-flex;
     }
   }
 
